# coding-agent

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  agent.py  bridge.py  logging_setup.py  main.py  mcp_config.example.json  pyproject.toml  requirements-dev.txt  sandbox.py  ui.py  vscode-bridge.py
.github/workflows/: ci.yml
core/: agent_loop.py  approval_hook.py  checkpoint.py  context_manager.py  hooks.py  llm_client.py  mcp_client.py  message_builder.py  providers.py  rules_loader.py  session_store.py  types.py
llm/: __init__.py  anthropic_client.py  deepseek_client.py  google_client.py  ollama_client.py  openai_client.py
memory/: embeddings.py  graph.py  store.py
project/: __init__.py  detector.py  types.py
scripts/: _build_browser_tools.py  _test_graphify.py
tests/: conftest.py  test_agent.py  test_competitive_features.py  test_core.py  test_core_modules.py  test_mcp_and_cost.py  test_memory.py  test_modular_agent.py  test_registry.py  test_sandbox.py  test_tools.py
tools/: agent_orchestration.py  ask_question_tool.py  base.py  bash_tool.py  brief_tool.py  browser_tools.py  browser_use_tool.py  config_tool.py  data_tools.py  datetime_tools.py  desktop_tools.py  file_tools.py  git_tools.py  graphify_tool.py  lsp_tools.py  mcp_tools.py  memory_tools.py  plan_tools.py  registry.py  session_tools.py  skill_tools.py  subagent_tool.py  task_tools.py  utility_tools.py  web_tools.py
vscode-extension/: package.json
